Fixed flickering options list

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,7 +47,6 @@ body {
   position:relative;
   left:0px;
   top:-15px;
-  transition: opacity 0.3s;
   opacity:0;
   overflow: hidden;
 }
